[package]
name = "samantha"
version = "0.1.0"
authors = ["LuNeder <luananeder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11"
symlink = "0.1.0"
glob = "0.3.0"
text_io = "0.1.8"
rpassword = "5.0"
